RESOLVED FIXED244273
[WebKit] Harden assertion in resizeTable
https://bugs.webkit.org/show_bug.cgi?id=244273
Summary [WebKit] Harden assertion in resizeTable
Yijia Huang
Reported 2022-08-23 14:36:41 PDT
...
Attachments
Yijia Huang
Comment 1 2022-08-23 14:37:23 PDT
Yijia Huang
Comment 2 2022-08-23 14:46:53 PDT
EWS
Comment 3 2022-08-24 17:47:50 PDT
Committed 253760@main (4eec247fa85f): <https://commits.webkit.org/253760@main> Reviewed commits have been landed. Closing PR #3592 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.