[WebKit] Harden assertion in resizeTable https://bugs.webkit.org/show_bug.cgi?id=244273 rdar://98542255

Reviewed by Yusuke Suzuki and Saam Barati.

We should harden the assertion in SharedStringHashStore::resizeTable.

* Source/WebKit/Shared/SharedStringHashStore.cpp:
(WebKit::SharedStringHashStore::resizeTable):

Canonical link: https://commits.webkit.org/253760@main